# exploring_gtest

./: .gitignore
simple_math/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  gtest_math.cpp  simple_math.cpp  simple_math.h
